# glyfi

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: GENERIC_VIEW_PLUMBING.md  RUNBOOK.md  VIEW_CONFIG.md  architecture.md  bdd.md  config.md  docs-capture.md  events.md  openai-pane.md  plugins.md  testing.md  theme-a11y.md  ui-gallery.md  walkthrough.md  widgets.md
docs/specs/: README.md
examples/: plumbing_demo.py
glyfi/: __main__.py  app.py  cli.py  config.py  protocol.py  stepper.py  transport.py
glyfi/contrib/: __init__.py
glyfi/plugins/: __init__.py  commands.py  handlers.py  loader.py  manifest.py  palette.py  refplugin.py  sources.py
glyfi/ui/: clock.py  config_editor.py  config_store.py  content_view.py  curses_view.py  driver.py  events.py  fields.py  history.py  model.py  (+11 more)
tests/: conftest.py  test_app_smoke.py  test_clock.py  test_commands_pipeline.py  test_config.py  test_config_editor.py  test_config_store.py  test_content_view.py  test_docs_capture.py  test_docs_capture_plugin.py  test_docs_gallery.py  test_docs_markdown_flow.py  test_driver.py  test_events.py  test_fields.py  test_handlers.py  test_history.py  test_hotreload.py  test_input_painter.py  test_keymap.py  test_layout.py  test_list_window.py  test_loader.py  test_manifest.py  test_model.py  test_openai_client.py  test_openai_pane_widget.py  test_palette.py  test_paste_input.py  test_prompt_state.py  test_protocol.py  test_registry_isolation.py  test_settings.py  test_sources.py  test_stepper.py  test_theme.py  test_ticker.py  test_transport.py  test_view.py  test_view_config.py  (+3 more)
(+51 files in other folders)
