[project]
name = "glyfi"
version = "0.1.0"
description = "An extensible, configurable curses TUI framework for terminal apps."
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
authors = [{name = "Landan Parker", email = "landanparker@gmail.com"}]
keywords = ["tui", "curses", "terminal", "mvvm", "plugins"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: User Interfaces",
    "Topic :: Terminals",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Documentation = "https://github.com/TechDevGroup/glyfi/tree/main/docs"
Source = "https://github.com/TechDevGroup/glyfi"

[project.scripts]
glyfi = "glyfi.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["glyfi*"]

[tool.setuptools.package-data]
glyfi = ["plugins/builtin/*.json", "uitest/specs/*.feature"]

[tool.pytest.ini_options]
testpaths = ["tests"]
